fixed gap of social media icons

--- a/styles.css
+++ b/styles.css
@@ -259,4 +259,10 @@ section {
 height: 20px;
 }
 
+.sm-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
 /*footer-section-end*/
